Canary-deployment-copy/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: canary-ns
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: online-shop-v1
            port:
              number: 80
